@@ -1,3 +1,12 @@
+2007-02-07  Scott James Remnant  <scott@netsplit.com>
+
+	* init/job.c (job_failed_event): Function to turn an event into one
+	that includes all the necessary arguments and environment.
+	(job_change_state): Call job_failed_event for the stop and stopped
+	events (bit hacky at the moment, will improve later).
+	* init/tests/test_job.c (test_change_state): Check that the failed
+	events are generated properly.
+
 2007-02-06  Scott James Remnant  <scott@netsplit.com>
 
 	* init/job.c (job_change_state): Reset the failed member when
